[Update] Fixed button position on smaller screens, pushed forgotten main/ css file

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -57,6 +57,8 @@ header .right_half {
 
 .info_wrapper { 
     flex: 2;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .form_profile {
